syntax = "proto3";

// cat simple.bin | protoc --decode_raw
message Simple {
    uint32 id = 1;
    bool is_simple = 2;
    string name = 3;
    repeated int32 sample_list = 4;
}